# Game

./: CMakeLists.txt  Cell.cpp  Cell.h  CommandReader.cpp  CommandReader.h  Controller.cpp  Controller.h  DrawCell.cpp  DrawCell.h  DrawField.cpp  DrawField.h  Event.cpp  Event.h  Event_play.cpp  Event_play.h  Field.cpp  Field.h  Game.cpp  Game.h  Mediator.h  Play.cpp  Play.h  Player.cpp  Player.h  Point.h  README.md  Reader.cpp  Reader.h  main.cpp
Draw_SFML/cpp/: DrawCell.cpp  DrawEvent.cpp  DrawField.cpp  DrawPlayer.cpp  Game.cpp
Draw_SFML/header/: DrawCell.h  DrawEvent.h  DrawField.h  DrawPlayer.h  Game.h
Event/cpp/: EffectOnField.cpp  EffectOnPlayer.cpp  PartEvent.cpp  PlatfotmEvent.cpp  StormEvent.cpp  StormMoveEvent.cpp  SunEvent.cpp  WellEvent.cpp
Event/header/: EffectOnField.h  EffectOnPlayer.h  IEvent.h  PartEvent.h  PlatfotmEvent.h  StormEvent.h  StormMoveEvent.h  SunEvent.h  WellEvent.h
Game_Logic/cpp/: Cell.cpp  Commands.txt  Field.cpp  Game.cpp  GameOver.cpp  Observable.cpp  Player.cpp  Reader.cpp  Status_game.cpp  Win.cpp  main.cpp
Game_Logic/header/: Cell.h  Field.h  Game.h  GameOver.h  Observable.h  Observer.h  Player.h  PlayerController.h  Reader.h  Status_game.h  Win.h
Input/cpp/: Converter.cpp  FileReader.cpp  GameController.cpp  InputMediator.cpp  KeyboardReader.cpp  LoggerController.cpp  PlayerController.cpp  Reader.cpp  ReaderLogger.cpp
Input/header/: Converter.h  FileReader.h  GameController.h  IController.h  InputMediator.h  InputMessage.h  KeyboardReader.h  LoggerController.h  PlayerController.h  Reader.h  ReaderLogger.h
(+64 files in other folders)
